# FEM

./: DriverAMR17.jl  DriverSustainabilityBenchmarkingWeek1.jl  Jakobs_notebook_julia.ipynb  Jakobs_notebook_python.ipynb  Julia_C.ipynb  README.md  calculations.mw  orangutan.ipynb  pyproject.toml
aflevering 1/: Maple_calculations.mw
handin 1/: DriverAMR17.jl
week 1/: Jakobs_notebook_python.ipynb  Julia_C.ipynb  Julia_C17.ipynb  gorilla.ipynb
week 1/handin 1/: DriverAMR17.jl  DriverSustainabilityBenchmarkingWeek1.jl
week 2/: Claras_julia_week2.ipynb  Jakobs_julia_week2.ipynb  gorilla.ipynb
week 2/driver scripts/: DriverSustainabilityBenchmarkingWeek2.jl  DriverSustainabilityBenchmarkingWeek2.m  DriverSustainabilityBenchmarkingWeek2.py
week 2/handin/: ChatGPT eksempler.odt  Driver28.jl  Driver28b.jl  DriverSustainabilityBenchmarkingWeek2.jl  Week2ResultsGroup18.txt
week 2/handin/plots/: Week2ResultsGroup18.txt
week 3/: Claras_julia_week3.ipynb  Jakobs_week3.ipynb  bavian.ipynb
