[tool.poetry]
name = "fem"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
numpy = "^1.26.2"
SciPy = "^1.11.4"
matplotlib = "^3.8.2"
sympy = "^1.12"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
